# qm

./: .gitignore  .packit-oci-hooks.sh  .packit-wayland.sh  .packit.sh  .packit.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  SECURITY.md  containers.conf  create-seccomp-rules  install.sh  qm-selinux.spec.rpkg  qm.8.md  qm.container  qm.fc  qm.if  qm.spec.rpkg  qm.te  qm.unit  qm_contexts  qm_file_context  qm_selinux.8  setup
.github/: CODEOWNERS
.github/workflows/: bandit  bandit.yaml  check-cgroup.yml  check-python-bandit  check-subpackages.yml  check-with-bandit.yml  documentation-link.yaml  drop-in-target-build-only.yml  fedora-latest-make-rpm-setup-run-test.yml  mkdocs-check.yml  oci-hooks-tests.yml  pre-commit.yml  rtd-pr.yaml  sourcery.yml  unit-tests.yml
build-aux/: exclude_from_tar_gz_subpackage_kvm.txt  validations
demos/: asilservice  asilservice.py  dashboard-tui  demo
demos/devconf-2024/: README.md  lib  prepare-demo.sh  setup  tools
docs/: mkdocs.yml  requirements.txt
experimental/: README.md
oci-hooks/: tox.ini
plans/: main.fmf
pre-commit-hooks/: validate-config.sh
rpm/: .coprignore  qm.spec  update-spec-version.sh
tests/e2e/tools/FFI/bluechi-agent-flooder/subprojects/hashmap.c/: meson.build
tests/e2e/tools/FFI/bluechi-agent-flooder/systemd-units/: meson.build
tools/: cicd-example-using-seccomp-rules  comment-tz-local  generate-release-notes  getcpu-usage  getmemory-usage  qm-change-podman-runtime  qm-is-ostree  qm-rootfs  qm-storage-settings  qmctl  version-update
{--user}/: qm.service
(+367 files in other folders)
